--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 springdoc.swagger-ui.disable-swagger-default-url: true
 springdoc.api-docs.path=/v3/api-docs
+
+keycloak.realm = master
+keycloak.auth-server-url = http://127.0.0.1:8888/auth
+keycloak.ssl-required = external
+keycloak.resource = demoapp
+keycloak.credentials.secret = YDbieOhOx9RaJTXfrLXagPxsQj3Z464R
+keycloak.use-resource-role-mappings = true
