--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-springdoc.swagger-ui.disable-swagger-default-url: true
+springdoc.swagger-ui.disable-swagger-default-url= true
 springdoc.api-docs.path=/v3/api-docs
 
-keycloak.realm = master
-keycloak.auth-server-url = http://127.0.0.1:8888/auth
-keycloak.ssl-required = external
-keycloak.resource = demoapp
-keycloak.credentials.secret = YDbieOhOx9RaJTXfrLXagPxsQj3Z464R
+keycloak.realm                      = demo-realm
+keycloak.auth-server-url            = http://localhost:8888//auth
+keycloak.ssl-required               = external
+keycloak.resource                   = confidential-client
+keycloak.credentials.secret         = 6PTPHzLSgTWHGDdC8bCEm0VeDdvpJOv3
 keycloak.use-resource-role-mappings = true
+keycloak.bearer-only                = true
