--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>8</java.version>
+		<keycloak.version>16.1.1</keycloak.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +49,7 @@
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>${keycloak.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.keycloak</groupId>
@@ -88,7 +90,7 @@
 			<dependency>
 				<groupId>org.keycloak.bom</groupId>
 				<artifactId>keycloak-adapter-bom</artifactId>
-				<version>16.1.1</version>
+				<version>${keycloak.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
