configured keycloak login for open api

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -2,7 +2,7 @@ springdoc.swagger-ui.disable-swagger-default-url= true
 springdoc.api-docs.path=/v3/api-docs
 
 keycloak.realm                      = demo-realm
-keycloak.auth-server-url            = http://localhost:8888//auth
+keycloak.auth-server-url            = http://localhost:8888/auth
 keycloak.ssl-required               = external
 keycloak.resource                   = confidential-client
 keycloak.credentials.secret         = 6PTPHzLSgTWHGDdC8bCEm0VeDdvpJOv3
