post message to kafka

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -8,3 +8,13 @@ keycloak.resource                   = confidential-client
 keycloak.credentials.secret         = 6PTPHzLSgTWHGDdC8bCEm0VeDdvpJOv3
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only                = true
+
+# https://medium.com/geekculture/implementing-a-kafka-consumer-and-kafka-producer-with-spring-boot-60aca7ef7551
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.groupid=group_id
+topic.name.producer=topic.test
+
+# Common Kafka Properties
+auto.create.topics.enable=true
